# ai-assistant

./: .gitignore  README.md  pyproject.toml
src/repoask/: cli.py
src/repoask.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/repoask/chat/: assistant.py
src/repoask/config/: manager.py  schema.py
src/repoask/ingestion/: chunker.py  repo_map.py  scanner.py  tracker.py
src/repoask/providers/: base.py
src/repoask/providers/embeddings/: factory.py  huggingface.py  openai.py
src/repoask/providers/llm/: anthropic.py  factory.py  groq.py  ollama.py  openai.py
src/repoask/retrieval/: context_builder.py  retriever.py
src/repoask/review/: reviewer.py
src/repoask/store/: chroma.py
src/repoask/testing/: test_generator.py
src/repoask/tracing/: call_graph.py  entry_point_resolver.py  graph_traverser.py  side_effect_detector.py  trace_formatter.py
